--- a/web/index.html
+++ b/web/index.html
@@ -23,14 +23,29 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="walte_soluciones">
+  <meta name="apple-mobile-web-app-title" content="firebase">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>walte_soluciones</title>
+  <title>firebase</title>
   <link rel="manifest" href="manifest.json">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYk6CFFDz5vVoTfx-9X8CHU77o_KroEsE"></script>
+
 </head>
 <body>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script> 
+  <script>
+    var firebaseConfig = {
+      apiKey: "AIzaSyCakAKaNg-CpmDo5LeUenmsWow0Nu1Ltlo",
+      authDomain: "wiken-51b4f.firebaseapp.com",
+      projectId: "wiken-51b4f",
+      storageBucket: "wiken-51b4f.appspot.com",
+      messagingSenderId: "631317372749",
+      appId: "1:631317372749:web:3d718011b36eed46516104",
+      measurementId: "G-4T2YVEVJVB"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
